<resources>
    <string name="app_name">Spending_Management</string>
    <!-- TODO: Remove or change this placeholder text -->
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->

    <string name="app_income">Income</string>
    <string name="app_expense">Expense</string>
    <string name="app_select_date">Select date</string>
    <string name="app_amount">Amount</string>
    <string name="app_category">Category</string>
    <string name="app_account">Account</string>
    <string name="app_note">Note</string>
    <string name="app_save">Save</string>
    <string name="app_delete">Delete</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_desc">Switch between light and dark themes</string>
    <string name="language">Language</string>
    <string name="language_desc">Choose the app\'s language</string>

    <string name="app_total">Total</string>

    <string name="app_transaction">Transaction</string>
    <string name="app_statistics">Statistics</string>
    <string name="app_setting">Setting</string>
    <string name="app_more">More</string>

    <string name="app_daily">Daily</string>
    <string name="app_monthly">Monthly</string>
    <string name="app_calendar">Calendar</string>

    <string name="app_export_excel">Export Excel</string>
    <string name="app_import_Excel">Import Excel</string>
    <string name="app_clear">Clear data</string>
</resources>